kubernetes/apps/emby/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      runtimeClassName: nvidia
      containers:
        - name: emby
          image: emby/embyserver:4.10.0.14
          ports:
            - containerPort: 8096
              name: http
          resources:
            limits:
              nvidia.com/gpu: "1"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: emby-config
        - name: media
          nfs:
            server: ${NAS_IP}
            path: ${NAS_DATA_PATH}/media
